# audioClassify

./: .env  .env.template  README.md  main.py  pyproject.toml  requirements.txt
audioClassify/: sounds.ipynb
audioClassify/spectrogram_images/: sounds.ipynb
kaggle/: kaggle.json
notebooks/ericbusboom/: sounds.ipynb
notebooks/maxbusboom/: model_cnn_4_layers_simple.py  model_cnn_6_layers_simple.py  model_cnn_8_layers_simple.py  model_cnn_dynamic.py  u8kcnn_data.ipynb  u8kcnn_train.ipynb  urban_base_model_cnn.py
previous_versions/: sounds.ipynb
